# joycon-usb-adapter

./: CMakeLists.txt
src/: bt_bridge.c  bt_bridge.h  btstack_config.h  joycon_translator.c  joycon_translator.h  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
